--- a/saude.html
+++ b/saude.html
@@ -9,7 +9,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -54,9 +54,12 @@
 <div class="container-fluid padding">
 <div class="row text-center padding">
 	<div class="col-xs-12 col-sm-6 col-md-4">
-		<h3>O QUE É UM CORONAVÍRUS?</h3>
-		<p>É uma grande família de vírus, que em humanos é conhecida por infecções respiratórias que se estendem
-			da gripe comum a doenças mais severas. O mais recente dessa família é o COVID-19.
+		<h3>O QUE É UM CORONAVÍRUS?</h3> <!--PRECISA MUDAR-->
+		<p>
+			Os coronavírus são um grupo de vírus conhecidos desde meados dos anos 1960 e pertencem à subfamília Orthocoronavirinae da família Coronaviridae.
+			Vírus da família Coronaviridae causam uma variedade de doenças no homem e nos animais, especialmente no trato respiratório. Sete espécies podem infectar humanos, 
+			sendo que três podem produzir doenças graves, o Mers-CoV, causador da Mers (síndrome respiratória do Oriente Médio), o Sars-CoV, agente da pandemia de Sars 
+			(síndrome respiratória aguda grave) de 2002-2003,  e o Sars-CoV-2, este sendo o causador da atual pandemia de covid-19.
 		</p>
 	</div>
 	<div class="col-xs-12 col-sm-6 col-md-4">
@@ -64,7 +67,7 @@
 		<p>Os sintomas variam de um simples resfriado até uma pneumonia severa. Os sintomas mais comuns sendo: 
 			Tosse, febre, coriza, dor de garganta, dificuldade respiratória dentre outros.</p>
 		<p>Além disso, de acordo com informações reveladas pela OMS(<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub" target='_blank' >Organização Mundial da Saúde</a>), o período até que o hospedeiro apresente sintomas
-			varia de 1 a 5 dias, mas podendo chegar até 11 dias em alguns casos.</p>
+			varia de 1 a 5 dias, mas podendo chegar até 15 dias em alguns casos.</p>
 	</div>
 	<div class="col-xs-12 col-sm-4">
 		<h3>EXISTE UMA VACINA?</h3>
@@ -74,11 +77,13 @@
 	</div>
 	<div class="col-xs-12 col-sm-4">
 		<h3>COMO É TRANSMITIDO?</h3>
-		<p>A transmissão acontece a partir de uma pessoa doente para outro indivíduo ou por contato próximo por meio das seguintes possibilidades:
-			toque do aperto de mão, gotículas de saliva, espirro, tosse, catarro, superfícies contaminadas, como celulares, mesas, maçanetas, brinquedos, teclados de computador etc.
+		<p>A transmissão acontece a partir do momento que o indivíduo realiza contato com um cidadão ou objeto infectado e em seguida, sem realizar a higiene adequada, 
+			toca uma das mucosas do corpo ou outra  forma de entrada para o corpo, como por exemplo uma ferida. 
+			 Hão de ser citadas também algumas das formas que o vírus se transporta: Toque do aperto de mão, gotículas de saliva, espirro, tosse, catarro, superfícies contaminadas
+			 como celulares, mesas, maçanetas, brinquedos, teclados de computador etc.
 		</p>
-		<p>Vale-se lembrar que o vírus não viaja longas distâncias pelo ar. Sendo assim, a contaminação é realizada pelo toque ou espirro/tosse, nesse caso podendo chegar até por volta
-			de três metros naquela direção e cair na superfície mais próxima.
+		<p>Vale-se lembrar que o vírus não viaja longas distâncias pelo ar. Sendo assim, a contaminação realizada pelo toque ou espirro/tosse ocorre na distância de aproximadamente
+			 três metros a partir do infectado e cair na superfície mais próxima.
 		</p>
 	</div>
 	<div class="col-xs-12 col-sm-4">
@@ -231,7 +236,7 @@
 			<div class="col-lg-6">
 				<h2>NOSSOS AGRADECIMENTOS:</h2>
 				<hr class="my-2">
-				<p>O conteúdo apresentado nesta página foi adquirido pela parceria com a Me.Caroline de Azevedo Moutinho, a qual devemos agradecimentos especiais pelo compartilhamento
+				<p>O conteúdo apresentado nesta página foi adquirido pela parceria com a Mestra Caroline de Azevedo Moutinho, a qual devemos agradecimentos especiais pelo compartilhamento
 					de seus conhecimentos específicos em relação ao tema.</p>
 				<p>Caroline é graduada em Ciências Biológicas: modalidade Microbiologia e Imunologia, pela Universidade Federal do Rio de Janeiro (UFRJ). Além disso, possui 
 					mestrado desenvolvido na área de Imunologia pelo programa de Pós-graduação em Ciências, do Instituto de Microbiologia Paulo de Goes (UFRJ).</p>
