--- a/saude.html
+++ b/saude.html
@@ -42,7 +42,7 @@
 <div class="container-fluid padding">
 <div class="row welcome text-center">
 	<div class="col-12">
-		<h1 class="display-4">FIQUE ATENTO ÀS PRINCIPAIS ORIENTAÇÕES CONTRA O COVID-19</h1>
+		<h3>FIQUE ATENTO ÀS PRINCIPAIS ORIENTAÇÕES CONTRA O COVID-19</h3>
 	</div>
 	<hr>
 </div>
@@ -54,29 +54,31 @@
 <div class="container-fluid padding">
 <div class="row text-center padding">
 	<div class="col-xs-12 col-sm-6 col-md-4">
-		<h3>O QUE É UM CORONAVÍRUS?</h3> <!--PRECISA MUDAR-->
+		<h4>O QUE É UM CORONAVÍRUS?</h4> <!--PRECISA MUDAR-->
 		<p>
 			Os coronavírus são um grupo de vírus conhecidos desde meados dos anos 1960 e pertencem à subfamília Orthocoronavirinae da família Coronaviridae.
 			Vírus da família Coronaviridae causam uma variedade de doenças no homem e nos animais, especialmente no trato respiratório. Sete espécies podem infectar humanos, 
 			sendo que três podem produzir doenças graves, o Mers-CoV, causador da Mers (síndrome respiratória do Oriente Médio), o Sars-CoV, agente da pandemia de Sars 
 			(síndrome respiratória aguda grave) de 2002-2003,  e o Sars-CoV-2, este sendo o causador da atual pandemia de covid-19.
 		</p>
+		<a href="http://scielo.iec.gov.br/scielo.php?script=sci_arttext&pid=S2176-62232014000200005" target="_blank"><button type="button" class="btn btn-outline-secondary btn-lg" >Saiba Mais</button></a>
 	</div>
 	<div class="col-xs-12 col-sm-6 col-md-4">
-		<h3>QUAIS OS SINTOMAS DO COVID-19?</h3>
+		<h4>QUAIS OS SINTOMAS DO COVID-19?</h4>
 		<p>Os sintomas variam de um simples resfriado até uma pneumonia severa. Os sintomas mais comuns sendo: 
 			Tosse, febre, coriza, dor de garganta, dificuldade respiratória dentre outros.</p>
 		<p>Além disso, de acordo com informações reveladas pela OMS(<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub" target='_blank' >Organização Mundial da Saúde</a>), o período até que o hospedeiro apresente sintomas
 			varia de 1 a 5 dias, mas podendo chegar até 15 dias em alguns casos.</p>
+
 	</div>
 	<div class="col-xs-12 col-sm-4">
-		<h3>EXISTE UMA VACINA?</h3>
+		<h4>EXISTE UMA VACINA?</h4>
 		<p> Não existe vacina para o COVID-19, porém existem diversos grupos de médicos e cientistas correndo contra o tempo
 			procurando desenvolver uma vacina o mais rápido possível, e que futuramente esteja ao alcance do público.
 	   </p> 
 	</div>
 	<div class="col-xs-12 col-sm-4">
-		<h3>COMO É TRANSMITIDO?</h3>
+		<h4>COMO É TRANSMITIDO?</h4>
 		<p>A transmissão acontece a partir do momento que o indivíduo realiza contato com um cidadão ou objeto infectado e em seguida, sem realizar a higiene adequada, 
 			toca uma das mucosas do corpo ou outra  forma de entrada para o corpo, como por exemplo uma ferida. 
 			 Hão de ser citadas também algumas das formas que o vírus se transporta: Toque do aperto de mão, gotículas de saliva, espirro, tosse, catarro, superfícies contaminadas
@@ -85,23 +87,28 @@
 		<p>Vale-se lembrar que o vírus não viaja longas distâncias pelo ar. Sendo assim, a contaminação realizada pelo toque ou espirro/tosse ocorre na distância de aproximadamente
 			 três metros a partir do infectado e cair na superfície mais próxima.
 		</p>
+		<a href="https://pebmed.com.br/coronavirus-como-e-a-transmissao-do-sars-cov-2-por-aerossol-e-fomites/" target="_blank"><button type="button" class="btn btn-outline-secondary btn-lg">Saiba Mais</button></a>
+
 	</div>
 	<div class="col-xs-12 col-sm-4">
-		<h3>ESTRATÉGIAS DE PREVENÇÃO</h3>
+		<h4>ESTRATÉGIAS DE PREVENÇÃO</h4>
 		<p>O governo deve aderir à uma quarentena intensiva e, se não surtir efeito, deve-se fazer 
 			um Lockdown (impedimento de circulação de pessoas que não sejam de serviços sociais) e reforçar todas as ações de higiene pessoal
 			como: higienização das mãos com água e sabão ou álcool em gel e utiliização de máscaras de forma correta para que não haja
 			a propagação do vírus.
 		</p>
+
 	</div>
 	<div class="col-xs-12 col-sm-4">
-		<h3>O QUE FAZER AO APRESENTAR SINTOMAS?</h3>
+		<h4>O QUE FAZER AO APRESENTAR SINTOMAS?</h4>
 		<p> A primeira coisa a se fazer ao apresentar sintomas é o isolamento social completo. Evitar contato com outros é de suma importância, entretanto, caso
 			se faça necessário, a pessoa que entrar em contato com o infectado deve estar totalmente protegida.</p>
 		<p>Além disso, o indivíduo com sintomas leves deve permanecer em isolamento. Caso apresente quadros mais graves, é urgente que o serviço de emergência seja procurado para que
 			os profissionais da saúde avaliem a gravidade. Na presença da síndrome respiratória aguda, o paciente deverá ser encaminhado a um hospital com suporte de respiradores e
 			a possibilidade de entubação do mesmo.
 		</p>
+		<a href="https://coronavirus.saude.gov.br/sobre-a-doenca" target="_blank"><button type="button" class="btn btn-outline-secondary btn-lg">Saiba Mais</button></a>
+
 	</div>
 
 </div>
@@ -109,12 +116,46 @@
 </div>
 
 <!--- Two Column Section -->
+<div class="container-fluid padding">
+<div class="row padding">
+	<div class="modal fade" id="myModal">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-body">
+					<img src="img/doencas.png" class="img-fluid">
+				</div>
+			</div>	
+		</div>
+	</div>
+	<div class="col-sm-4">
+		<a href="#" data-toggle="modal" data-target="#myModal"><img src="img/doencas.png" class="img-fluid"></a>
+		<p>Referência: <a href="https://coronavirus.saude.gov.br/index.php/perguntas-e-respostas" target="blank">coronavirus.saude.gov.br</a></p>
+	</div>
+	<div class="col-lg-6">
+		<h3>Diferenças entre Covid-19 e outras doenças:</h3>
+		<hr class="my-3">
+		<p>A disseminação do coronavírus pelo mundo preocupa muitas pessoas. Mas, por mais estranho que seja ouvir palavras como “pandemia”, 
+			os dados mostram que os sintomas do coronavírus podem ser relativamente leves para a maioria das pessoas que contraem o vírus.</p>
+		<p>É realmente difícil dizer a diferença entre um caso leve de coronavírus e o resfriado comum, por exemplo. Mesmo para os médicos. Em vez disso, 
+			os médicos especificamente precisam testar o coronavírus para saber com certeza se alguém tem o Covid-19 em vez de resfriado.</p>
+		<p>Pessoas com coronavírus podem ter sintomas semelhantes aos da gripe. Tanto a gripe quanto o coronavírus irritam os tubos brônquicos, 
+			e isso produz uma tosse geralmente seca. Esses dois vírus também podem fazer você se sentir pior em todo o seu corpo, como você se sentir muito cansado 
+			e só quer ir para a cama porque não tem energia.</p>
+		<p>O tratamento da gripe é diferente do tratamento com coronavírus. Enquanto você trata os sintomas nas duas situações, a gripe também pode ser tratada com medicamento antiviral. 
+			A vacina contra a gripe pode ajudar a evitá-la ou, pelo menos, diminuir o risco de desenvolver complicações caso ocorra uma contração o vírus. Não há nada semelhante para o coronavírus.</p>
+		<a href="https://saude.abril.com.br/medicina/coronavirus-gripe-diferencas-semelhancas/" target="_blank"><button type="button" class="btn btn-outline-secondary btn-lg">Saiba Mais</button></a>
 
+	</div>
+
+	
+
+</div>
+</div>
 
 <div class="container-fluid padding">
 <div class="row padding">
 	<div class="col-lg-9">
-		<h2>QUAIS SÃO AS FASES DAS MEDIDAS DE PREVENÇÃO?</h2>
+		<h3>QUAIS SÃO AS FASES DAS MEDIDAS DE PREVENÇÃO?</h3>
 		<hr class="my-3">
 		<p>A resposta à pandemia pode ser subdividida em três fases: <b>Contenção</b>, <b>Mitigação</b>, <b>Supressão</b> e <b>Recuperação</b>.  </p>
 		<p>A <b>Contenção</b> inicia antes do registro de casos em um país ou região. Envolve, principalmente, o rastreamento ativo dos passageiros vindos do exterior e seus contatantes,
@@ -138,7 +179,7 @@
 	
 
 	<div class="col-md-6">
-		<h2>COMO É FEITO O DIAGNÓSTICO?</h2>
+		<h3>COMO É FEITO O DIAGNÓSTICO?</h3>
 		<hr class="my-3">
 		<p>
 			Existem algumas formas do diagnóstico ser realizado. Uma delas é pelo raio-x do tórax, mas também é necessário o swab nasal, onde será investigado por  PCR a presença do vírus. 
@@ -161,14 +202,14 @@
 			<div class="carousel-item active">
 				<img src="img/CarouselBackground2.png"> 
 				<div class="carousel-caption">
-					<h1 class="display-4">Ministério da Saúde</h1>
+					<h5 class="display-4">MINISTÉRIO DA SAÚDE</h5>
 					<a href="https://coronavirus.saude.gov.br" target="_blank"><button type="button" class="btn btn-primary btn-lg" >ACESSE AQUI</button></a>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="img/CarouselBackground3.png">
 				<div class="carousel-caption">
-					<h1 class="display-4">OMS</h1>
+					<h5 class="display-4">OMS</h5>
 					<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub" target="_blank"><button type="button" class="btn btn-primary btn-lg">ACESSE AQUI</button></a>
 				</div>
 			</div>
@@ -192,7 +233,7 @@
 
 
 
-<!--- Jumbotron -->
+<!--- Treco -->
 
 
 <div class="container-fluid" id="section1">
@@ -258,6 +299,17 @@
 <footer>
 	<div class="container-fluid padding">
 	<div class="row text-center">
+		<div class="col-md-4">
+			<hr class="light">
+			<h5>Alunos envolvidos:</h5>
+			<hr class="light">
+			<p>João Marcos Angelo Gomes</p>
+			<p>Igor Lisboa Fernandes</p>
+			<p>Eduardo Barraque Vitória</p>
+			<p>Jhonatan Augusto de Moraes</p>
+			<p>Matheus de Castro Gaetano</p>
+			<p>Franco Andrey</p>
+		</div>	
 		<div class="col-md-4">
 			<hr class="light">
 			<h5>Um oferecimento de:</h5>
